changed readme to be .rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,23 +1,27 @@
+---
+output: github_document
+---
 
-chessR
-======
+# chessR
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.org/JaseZiv/chessR.svg?branch=master)](https://travis-ci.org/JaseZiv/chessR) <!-- badges: end -->
+[![Travis build status](https://travis-ci.org/JaseZiv/chessR.svg?branch=master)](https://travis-ci.org/JaseZiv/chessR)
+<!-- badges: end -->
 
-Overview
---------
+## Overview
 
 This package is designed to allow users to extract their game data from the popular online chess platform [chess.com](https://www.chess.com/).
 
 The website offers a very convenient set of APIs to be able to access and documentation to these can be found [here](https://www.chess.com/news/view/published-data-api).
 
-Installation
-------------
+
+## Installation
 
 You can install the chessR package from github with:
 
-``` r
+```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("JaseZiv/chessR")
 ```
+
+
