--- a/README.Rmd
+++ b/README.Rmd
@@ -25,3 +25,58 @@ devtools::install_github("JaseZiv/chessR")
 ```
 
 
+## Functions
+
+There are a number of functions available in this package, both for extracting data and also for analysing and visualising data.
+
+### Extraction
+
+The following extraction functions will get json formatted game data and clean and convert it to a data frame.
+
+#### Raw Data
+
+```{r get_raw, eval = FALSE}
+# install.packages("devtools")
+raw_chess <- get_raw_game_data("JaseZiv")
+```
+
+
+#### Analysis Data
+
+The following two functions will extract the same data that the `get_raw_game_data()` function will, however these functions will also include additional columns to make analysing data easier.
+
+
+```{r get_analysis, eval=FALSE}
+chess_analysis_single <- analyse_player_games("JaseZiv")
+
+chess_analysis_multiple <- analyse_multiple_players(c("JaseZiv", "elroch"))
+
+```
+
+
+#### Get Top Players' usernames
+
+The below function allows the user to extract the top 50 leaders on the leaderboards for a number of different game types.
+
+The game types include:
+
+* "daily"
+* "daily960""
+* "live_rapid"
+* "live_blitz"
+* "live_bullet"
+* "live_bughouse"
+* "live_blitz960"
+* "live_threecheck"
+* "live_crazyhouse"
+* "live_kingofthehill"
+* "lessons"
+* "tactics"
+
+The usernames that are contained in the results can then be passes to the chess game data extraction function outlined above.
+
+```{r get_leaders, eval=FALSE}
+daily_leaders <- get_top50_leaderboard("daily")
+
+```
+
