added analysis functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,10 @@ devtools::install_github("JaseZiv/chessR")
 
 The functions available in this package are designed to enable the extraction of chess game data.
 
+### Data Extraction
+
+The functions detailed below relate to extracting data from chess.com
+
 
 **Raw Game Data**
 
@@ -70,4 +74,4 @@ daily_leaders <- get_top50_leaderboard(game_type = "daily")
 ```
 
 
-For a detailed guide to using the package, see the package [vignette](https://jaseziv.github.io/chessR/articles/using_chessR_package.html)
+For a detailed guide to using the package and the functions for analysis, see the package [vignette](https://jaseziv.github.io/chessR/articles/using_chessR_package.html)
