--- a/README.Rmd
+++ b/README.Rmd
@@ -10,14 +10,17 @@ output: github_document
 
 ## Overview
 
-This package is designed to allow users to extract their game data from the popular online chess platform [chess.com](https://www.chess.com/).
+This package is designed to allow users to extract game data from popular online chess platforms. The platforms currently supported in this package include:
 
-The website offers a very convenient set of APIs to be able to access and documentation to these can be found [here](https://www.chess.com/news/view/published-data-api).
+* [chess.com](https://www.chess.com/)
+* [Lichess](https://lichess.org/)
+
+These websites offer a very convenient set of APIs to be able to access data and documentation to these can be found [here for chess.com](https://www.chess.com/news/view/published-data-api) and [here for Lichess](https://lichess.org/api).
 
 
 ## Installation
 
-You can install the chessR package from github with:
+You can install the `chessR` package from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
@@ -31,24 +34,35 @@ The functions available in this package are designed to enable the extraction of
 
 ### Data Extraction
 
-The functions detailed below relate to extracting data from chess.com
+The functions detailed below relate to extracting data from the chess gaming sites currently supported in this package.
 
 
-**Raw Game Data**
+#### Raw Game Data
 
-The `get_raw_game_data()` function can take either a single, or multiple usernames. It will output a data frame with all the games played by that user.
+The game extraction functions can take a vector of either single or multiple usernames. It will output a data frame with all the games played by that user.
+
+The functions are below.
+
+**Note:**
+These functions query an API, which is rate limited. The limiting rates for chess.com are unknown. For Lichess, the limit is throttled to 15 games per second. Queries could therefore take a few minutes if you're querying a lot of games.
 
 ```{r get_raw, eval = FALSE}
-# install.packages("devtools")
-raw_chess <- get_raw_chessdotcom("JaseZiv")
+# function to extract chess.com game data
+chessdotcom_game_data <- get_raw_chessdotcom(c("JaseZiv", "Smudgy1"))
+
+# function to extract lichess game data
+lichess_game_data <- get_raw_lichess("Georges")
 ```
 
 
-**Analysis Data**
+#### Analysis Data
 
 The following function will extract the same data that the `get_raw_chessdotcom()` function will, however this function will also include additional columns to make analysing data easier.
 
 The function can be used either on a single player, or a character vector of multiple players.
+
+**Note:**
+This is only available for chess.com extracts
 
 
 ```{r get_analysis, eval=FALSE}
@@ -59,18 +73,30 @@ chess_analysis_multiple <- get_game_data(c("JaseZiv", "elroch"))
 ```
 
 
-**Get Top Players' usernames**
+### Leaderboards
 
-The below function allows the user to extract the top 50 leaders on the chess.com leaderboards for a number of different game types.
+The leaderboards of each game platform can be extracted for a number of different games available on each platform. Each are discussed below:
 
-The game types include:
+#### Chess.com
 
-> *"daily", "daily960", "live_rapid", "live_blitz", "live_bullet", "live_bughouse", "live_blitz960", "live_threecheck", "live_crazyhouse", "live_kingofthehill", "lessons" and "tactics"*.
+The below function allows the user to extract the top 50 players of each game type specified. Game types available include:
 
-The usernames that are contained in the results can then be passed to `get_raw_chessdotcom()` outlined above.
+> *"daily","daily960", "live_rapid", "live_blitz", "live_bullet", "live_bughouse", "live_blitz960", "live_threecheck", "live_crazyhouse", "live_kingofthehill", "lessons", "tactics"*
+
+The usernames that are contained in the results can then be passed to `get_raw_chessdotcom` outlined above.
 
 ```{r get_leaders, eval=FALSE}
-daily_leaders <- chessdotcom_leaderboard(game_type = "daily")
+chessdotcom_leaders <- get_top50_leaderboard(game_type = "daily")
+```
+
+#### Lichess
+
+The `get_lichess_leaderboard()` function takes in two parameters; how many players you want returned (with a max of 200 being returned) and the speed variant. Speed variants include;
+
+> *"ultraBullet", "bullet", "blitz", "rapid", "classical", "chess960", "crazyhouse", "antichess", "atomic", "horde", "kingOfTheHill", "racingKings", "threeCheck"*
+
+```{r get_lichess_leaders, eval=FALSE}
+lichess_leaders <- (how_many_players = 10, speed_variant = "blitz")
 ```
 
 
